--- a/src/titlescreen/titlescreen_color_ram.tex
+++ b/src/titlescreen/titlescreen_color_ram.tex
@@ -543,5 +543,5 @@
 
       \end{tikzpicture}
     \end{adjustbox}
-  }\caption[]{The shaded areas of \icode{SCREEN\_RAM} after they have been written to by \icode{DrawStripesBehindTitle} and \icode{DrawTitleScreenText}. }
+  }\caption[]{The shaded areas of \icode{COLOR\_RAM} after they have been written to by \icode{DrawStripesBehindTitle} and \icode{DrawTitleScreenText}. }
 \end{figure}
